[package]
name = "behemoth"
version = "0.0.0"
authors = ["Ayrat Badykov <ayratin555@gmail.com>"]
description = "WIP"
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/behemoth-corp/behemoth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
